@@ -1,5 +1,8 @@
 package app;
 
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.Locale;
 
 public class App {
@@ -23,9 +26,29 @@ public class App {
         }
     }
 
-    private static void killOnMacOs(int port) {
+    private static void killOnMacOs(int port) throws IOException, InterruptedException {
+        // Find the process ID using the port
+        Process findProcess = Runtime.getRuntime().exec(new String[]{"lsof", "-ti", "tcp:" + port});
+        BufferedReader reader = new BufferedReader(new InputStreamReader(findProcess.getInputStream()));
+        String pid = reader.readLine();
+        reader.close();
 
-        ProcessBuilder pb = new ProcessBuilder("lsof", "-ti", "tcp:" + port, "|", "xargs", "kill", "-9");
+        // If no process found
+        if (pid == null || pid.trim().isEmpty()) {
+            System.err.println("No process found running on port " + port);
+            return;
+        }
+
+        // Kill the process
+        Process killProcess = Runtime.getRuntime().exec(new String[]{"kill", "-9", pid});
+        int exitCode = killProcess.waitFor();
+
+        if (exitCode == 0) {
+            System.err.println("Process on port " + port + " killed successfully (PID: " + pid + ")");
+        } else {
+            System.err.println("Failed to kill process on port " + port);
+        }
+
     }
 
     private static boolean isMacos() {
